fix(waybar): backlight and battery spacing

--- a/arch/config/waybar/style.css
+++ b/arch/config/waybar/style.css
@@ -47,6 +47,7 @@ window#waybar {
 
 /* Modules - right */
 
+#battery,
 #bluetooth,
 #network,
 #language,
@@ -71,15 +72,21 @@ window#waybar {
   padding-right: 0.4rem;
 }
 
+/* Battery indicator with text is too wide */
+#battery {
+  padding-right: 0;
+}
+
+/* Backlight icon doesn't find standard width bounds and needs more spacing */
+#backlight {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 #language {
   /* Move language a bit left from a corner of the screen */
   margin-right: 1rem;
 }
-
-/* #backlight, */
-/* #battery { */
-/*   margin: 0 10px; */
-/* } */
 
 #clock {
   font-weight: 400;
